# map-my-world-api

./: README.md  database.db  postman.json  pyproject.toml
app/: main.py
app/domains/category/: categoryController.py  categoryDAO.py  categoryModel.py  categoryService.py
app/domains/location/: locationController.py  locationDAO.py  locationModel.py  locationService.py
app/domains/recommender/: recommenderController.py  recommenderModel.py  recommenderService.py
app/domains/review/: reviewController.py  reviewDAO.py  reviewModel.py  reviewService.py
app/providers/sqlite/: SQLiteClient.py
app/utils/: base.py
